lil overflow fix on projects

--- a/index.css
+++ b/index.css
@@ -759,7 +759,7 @@ h6,
   height: 100%;
   display: flex;
   flex-direction: column;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .project-card-overlay {
